--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
     background-image: image-set('psg.jpg');
 }
 
+#bd3{
+    background-image: image-set('bg3.jpg');
+}
 
 #h1{
     font-size: 150px;
@@ -19,27 +22,89 @@
 
 }
 
+#h2{
+    font-size: 75px;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+#h3{
+    font-size: 75px;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
+    color: blueviolet;
+}
+
+
+#img1{
+    width: 900px;
+    height: 1100px;
+    margin-left: 30%;
+}
+
+#img2{
+    width: 900px;
+    height: 1100px;
+    margin-left: 30%;   
+}
+
 #p1{
     font-size: 30px;
     text-align: center;
     margin-top: 0;
+    margin-bottom: 0;
 }
 
 #p1:hover {
     font-size: 100px;
     margin-top: 0;
+    margin-bottom: 0;
 }
 
 #b1{
     width: 300px;
     height: 50px;
-    font-size: 5px;
+    font-size: 20px;
     margin-left:44%;
     background-color: black;
 }
 
 #b1:hover {
+    font-size: 40px;
+    width: 600px;
+    height: 100px;
+    margin-left: 38%;
+}
+
+#b2{
+    width: 300px;
+    height: 50px;
     font-size: 20px;
+    margin-left:44%;
+    background-color: black;
+}
+
+#b2:hover {
+    font-size: 40px
+    ;
+    width: 600px;
+    height: 100px;
+    margin-left: 38%;
+}
+
+#b3{
+    width: 300px;
+    height: 50px;
+    font-size: 20px;
+    margin-left:44%;
+    background-color: white;
+}
+
+#b3:hover {
+    font-size: 40px
+    ;
     width: 600px;
     height: 100px;
     margin-left: 38%;
